# dagster-dlt-dbt-bird-demo

./: .gitignore  filesystem_pipeline.py  pyproject.toml
.dlt/: config.toml
bird_demo_local/: ingest_bird_translation.py
