[tool.poetry]
name = "bird-demo-local"
version = "0.1.0"
description = ""
authors = ["Sean McFall <sean.l.mcfall@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python =  ">=3.9,<3.9.7 || >3.9.7,<3.13"
dlt = {extras = ["duckdb"], version = "^0.4.8"}
streamlit = "^1.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
